base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: drug-search-tailwind
  name: drug-search-tailwind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drug-search-tailwind
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: drug-search-tailwind
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/dpd/drug-search-tailwind:latest
        name: drug-search-tailwind
        resources: {}
status: {}
