base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: drug-search-tailwind
  name: drug-search-tailwind
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: drug-search-tailwind
status:
  loadBalancer: {}
