base/web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: drug-search-tailwind
  name: drug-search-tailwind
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: ""
    name: drug-search-tailwind
    weight: null
status:
  ingress: null
